# ntfy-log

./: .gitignore  Cargo.toml  README.md  build_release.py  build_release.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: cli.rs  command.rs  constants.rs  helpers.rs  http.rs  log.rs  main.rs  ntfy.rs  self_update.rs
