[package]
name = "ntfy-log"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntfy = "0.4.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
url = "2.5.0"
serde_json = "1.0"
serde = "1.0.197"
color-eyre = "0.6.3"
owo-colors = "4.0.0"
atty = "0.2.14"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"]}
clap-verbosity-flag = "2.2.0"
